# evoride

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.evoride/: run.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
.intentflow/: roadmap.md  timeline.md  vision.md
.intentflow/plans/: ai-run-config.md  evor-cli-task-sessions.md  tasks-planning.md
core/: Cargo.toml
core/src/: lib.rs
docs/: index.html
ide/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ide/src/: App.css  App.tsx  TerminalWindow.tsx  main.tsx
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/capabilities/: default.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/skills/agent-memory/: SKILL.md
ide/src-tauri/skills/agent-memory/references/: example.md  templates.md
ide/src-tauri/src/: claude.rs  cloud.rs  connect.rs  edits.rs  event.rs  fs.rs  git.rs  guard.rs  intent.rs  jira.rs  judge.rs  lib.rs  localrpc.rs  mobile.rs  notify.rs  pause.rs  proctree.rs  remote.rs  run.rs  secrets.rs  serve.rs  session.rs  settings.rs  skills.rs  store.rs  summary.rs  tasktrack.rs  watch.rs
ide/src/components/: AgentPreviewGrid.tsx  AgentSwitcher.tsx  AgentTerminal.tsx  AgentsColumn.tsx  BranchSwitcher.tsx  CommandPalette.tsx  DiffView.tsx  Editor.tsx  EditsPanel.tsx  ErrorBoundary.tsx  FileExplorer.tsx  GitPanel.tsx  GridWorkspace.tsx  HomeBar.tsx  HomeView.tsx  IntentPanel.tsx  JiraIssuesDialog.tsx  JiraProjectPicker.tsx  Markdown.tsx  MobileAgents.tsx  MobileHome.tsx  MobileHomeShell.tsx  MobileWorkspace.tsx  NewAgentMenu.tsx  NotificationCenter.tsx  PauseControl.tsx  ProjectHome.tsx  ProjectRail.tsx  RunControl.tsx  RunSetupDialog.tsx  SessionLauncher.tsx  SettingsDialog.tsx  StatusBar.tsx  SuperProjectBar.tsx  TaskCard.tsx  TasksPanel.tsx  TasksView.tsx
ide/src/lib/: agents.ts  bridge.ts  clis.ts  demo.ts  tauri.ts  toast.ts  useIsMobile.ts  util.ts
server/: Cargo.toml
server/src/: api.rs  db.rs  hub.rs  main.rs
shared/src/: lib.rs
tui/: Cargo.toml
tui/src/: app.rs  detector.rs  main.rs  pty.rs  recorder.rs  streamer.rs  ui.rs
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/session/[id]/: SessionView.tsx  page.tsx
web/components/: AgentCard.tsx  ControlBar.tsx  LiveTerminal.tsx  Sidebar.tsx  StatusPanel.tsx
web/lib/: config.ts  protocol.ts  useControlChannel.ts
