[package]
name = "eterm-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "eterm-server"
path = "src/main.rs"

[dependencies]
shared.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
