[package]
name = "eterm-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "eterm-server"
path = "src/main.rs"

[dependencies]
shared.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
