[package]
name = "ide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify-debouncer-mini = "0.4"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
eterm-core = { path = "../../core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }


# Faster dev rebuilds: full debuginfo (debug=2) makes the link step of this
# large Tauri binary slow. Line tables keep usable backtraces while cutting
# link time and binary size noticeably. The bundled SQLite compiles once and is
# cached, so it only affects the first/clean build, not the edit-rebuild loop.
[profile.dev]
debug = "line-tables-only"
